refactor: 使用虚拟线程执行研究分支